--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+# JPA
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.jdbc.batch_size=10
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.open-in-view=false
 
+# DataSource
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# Logging
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.springframework.batch=trace
+
+# Batch
+spring.batch.jdbc.initialize-schema=always
